trying to make sure buttons are aligned when quiz starts again

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,4 +35,9 @@ button {
     border-radius: 10px;
 }
 
+button:hover, .highlight:hover {
+    background-color: #bb80ea;
+}
+
+
 
